
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ io_connect_t ;


 scalar_t__ MACH_PORT_NULL ;
 scalar_t__ get_user_client (char*,int ) ;
 int poc (scalar_t__) ;
 int printf (char*) ;

int main(int argc, char** argv){
  io_connect_t client = get_user_client("AppleUSBTCButtons", 0);
  if (client == MACH_PORT_NULL) {
    printf("no client\n");
    return 1;
  }

  poc(client);

  return 0;
}
