; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39927.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39927.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"AppleUSBTCButtons\00", align 1
@MACH_PORT_NULL = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [11 x i8] c"no client\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = call i64 @get_user_client(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 0)
  store i64 %7, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @MACH_PORT_NULL, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @poc(i64 %14)
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i64 @get_user_client(i8*, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @poc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
